--- a/Challenge.ipynb
+++ b/Challenge.ipynb
@@ -824,7 +824,7 @@
    "source": [
     "#### 2. What metric would you report for this dataset?\n",
     "\n",
-    "I will use the median of the middle 50% of the dataset as a metric to report for this dataset."
+    "I will use the **median of the middle 50%** of the dataset as a metric to report for this dataset."
    ]
   },
   {
@@ -834,7 +834,7 @@
    "source": [
     "#### 3. What is its value?\n",
     "\n",
-    "276.5"
+    "284.0"
    ]
   },
   {
