--- a/Challenge.ipynb
+++ b/Challenge.ipynb
@@ -885,14 +885,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "4e033eeb",
+   "cell_type": "markdown",
+   "id": "865daaba",
    "metadata": {},
    "source": [
-    "SELECT COUNT(DISTINCT OrderID) AS NumberOfOrders\n",
+    "```SELECT COUNT(DISTINCT OrderID) AS NumberOfOrders\n",
     "FROM Orders\n",
     "JOIN Shippers ON Shippers.ShipperID = Orders.ShipperID\n",
-    "WHERE Shippers.ShipperName = \"Speedy Express\""
+    "WHERE Shippers.ShipperName = \"Speedy Express\"```"
    ]
   },
   {
@@ -912,16 +912,16 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "93a528e4",
+   "cell_type": "markdown",
+   "id": "10a25f5d",
    "metadata": {},
    "source": [
-    "SELECT Employees.LastName, COUNT(DISTINCT OrderID) AS NumberOfOrders\n",
+    "```SELECT Employees.LastName, COUNT(DISTINCT OrderID) AS NumberOfOrders\n",
     "FROM Orders\n",
     "JOIN Employees ON Orders.EmployeeID = Employees.EmployeeID\n",
     "GROUP BY Employees.LastName\n",
     "ORDER BY NumberOfOrders DESC\n",
-    "LIMIT 1"
+    "LIMIT 1```"
    ]
   },
   {
@@ -941,11 +941,11 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "d3d72a21",
+   "cell_type": "markdown",
+   "id": "6f1c2c20",
    "metadata": {},
    "source": [
-    "SELECT Products.ProductName, Customers.Country, OrderDetails.Quantity\n",
+    "```SELECT Products.ProductName, Customers.Country, OrderDetails.Quantity\n",
     "FROM Orders\n",
     "INNER JOIN OrderDetails ON OrderDetails.OrderID = Orders.OrderID\n",
     "INNER JOIN Products ON Products.ProductID = OrderDetails.ProductID\n",
@@ -953,8 +953,16 @@
     "WHERE Country = \"Germany\"\n",
     "GROUP BY Products.ProductName\n",
     "ORDER BY Quantity DESC\n",
-    "LIMIT 1"
+    "LIMIT 1```"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c445feba",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
